--- a/app/assets/stylesheets/unauthenticated.scss
+++ b/app/assets/stylesheets/unauthenticated.scss
@@ -1,10 +1,9 @@
 @import "variables";
 
-html.unauthenticated-html, html.unauthenticated-html > body {
-  height: 100vh;
-}
-
 .unauthenticated {
+  height: 100vh;
+  display: flex;
+
   main {
     display: flex;
     flex-direction: row;
@@ -13,35 +12,38 @@ html.unauthenticated-html, html.unauthenticated-html > body {
     width: 100vw;
 
     .left-side {
-      align-items: flex-end;
-      display: flex;
-      flex-direction: column;
-      flex: 1;
-      justify-content: center;
-      padding: 2% 5% 2% 2%;
+      flex: 6;
+      padding: 13.75rem 10rem;
     }
 
     .right-side {
-      align-items: stretch;
-      box-sizing: border-box;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      width: 40vw;
-      padding: 2% 5% 2% 5%;
+      box-sizing: content-box;
+      flex: 4;
+      min-width: 330px;
+      padding: 13.75rem 8.4375rem;
+      position: relative;
     }
 
     .hero {
-      background: no-repeat top left / cover url(asset-path("hero-background.jpg"));
+      background: no-repeat top left / cover url(asset-path("hero-background.jpg")) $black;
 
-      .hero-container {
-        max-width: 800px;
-        padding-top: 4rem;
-        padding-left: 4.5rem;
-      }
-
-      .logo-relative {
+      header {
         position: relative;
+
+        .big-logo {
+          display: block;
+        }
+
+        .small-logo {
+          display: none;
+        }
+
+        .logo {
+          left: -4.75rem;
+          margin-bottom: 0.5rem;
+          position: absolute;
+          top: -4rem;
+        }
       }
 
       h1 {
@@ -52,13 +54,8 @@ html.unauthenticated-html, html.unauthenticated-html > body {
         margin-top: 0;
       }
 
-      img {
-        left: -4.75rem;
-        position: absolute;
-        top: -4rem;
-      }
-
       p {
+        backround-color: transparent;
         color: $hero-copy;
         font-size: 0.875rem;
         margin-top: 0;
@@ -74,8 +71,10 @@ html.unauthenticated-html, html.unauthenticated-html > body {
         }
 
         a {
+          backround-color: transparent;
           color: $hero-link;
           font-size: 0.75rem;
+          font-weight: $bold;
           margin-left: 0.5rem;
         }
       }
@@ -84,22 +83,24 @@ html.unauthenticated-html, html.unauthenticated-html > body {
     .form {
       color: $form-copy-color;
 
-      .form-container {
-        max-width: 330px;
-        padding-top: 5rem;
-        position: relative;
-      }
-
       .notifications {
+        left: 0;
+        padding: inherit;
         position: absolute;
-        top: -3rem;
+        top: -4.875rem;
         width: inherit;
+
+        p {
+          margin: 0;
+        }
       }
 
       .navigation {
         color: $form-copy-color;
+        left: 0;
+        padding: inherit;
         position: absolute;
-        top: 0rem;
+        top: -4.875rem;
         width: inherit;
 
         a {
@@ -137,9 +138,9 @@ html.unauthenticated-html, html.unauthenticated-html > body {
 
       .field {
         label {
+          display: block;
           font-size: 0.75rem;
           font-weight: $semi-bold;
-          display: block;
         }
 
         .wrapped_label {
@@ -197,7 +198,6 @@ html.unauthenticated-html, html.unauthenticated-html > body {
         a {
           color: $form-copy-color;
           font-size: 0.75rem;
-          //margin-left: 0.75rem;
         }
       }
 
@@ -209,16 +209,30 @@ html.unauthenticated-html, html.unauthenticated-html > body {
         color: $signin-legal;
         font-size: 0.6875rem;
         font-weight: $normal;
-
       }
 
       .legal p {
-        margin-top: 0.375rem;
         margin-bottom: 0.375rem;
+        margin-top: 0.375rem;
 
         > span:first-of-type {
           margin-right: 1.25rem;
         }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  .unauthenticated {
+    main {
+      .left-side {
+        padding: 6.875rem 5rem;
+      }
+
+      .right-side {
+        padding: 6.875rem 4.25rem;
+        min-width: 232px;
       }
     }
   }
@@ -233,27 +247,33 @@ html.unauthenticated-html, html.unauthenticated-html > body {
       .left-side {
         align-items: center;
         padding: 1.375rem;
+        flex: unset;
       }
 
       .right-side {
         align-items: center;
         padding: 1.375rem;
-        width: unset;
+        min-width: unset;
+        flex: 1;
       }
 
       .hero {
         background-size: cover;
 
-        .hero-container {
-          max-width: 330px;
-          padding-top: 0;
-          padding-left: 0;
-        }
+        header {
+          .big-logo {
+            display: none;
+          }
 
-        img {
-          position: initial;
-          height: 2.75rem;
-          width: 2.75rem;
+          .small-logo {
+            display: block;
+          }
+
+          .logo {
+            height: 2.75rem;
+            position: initial;
+            width: 2.75rem;
+          }
         }
 
         h1 {
@@ -283,6 +303,8 @@ html.unauthenticated-html, html.unauthenticated-html > body {
         }
 
         .notifications {
+          padding-left: 0;
+          padding-right: 0;
           position: initial;
           top: 0;
           width: inherit;
