--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -12,6 +12,7 @@ $semi-bold: 600;
 $base-font-size: 16px;
 
 // Colors
+$black: #000000;
 $cornflower: #6dccf6;
 $dark-bluegray: #5f777f;
 $bluegray: lighten($dark-bluegray, 20%);
